workspace-sf/force-app/main/default/objects/Configuracao__c/Configuracao__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as regras de configuração de oferta</description>
    <label>Configuração</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>