workspace-sf/force-app/main/default/objects/Configuracao__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Código</label>
    <type>AutoNumber</type>
</CustomField>