workspace-sf/force-app/main/default/objects/Configuracao__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <label>Peso</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>