workspace-sf/force-app/main/default/objects/Configuracao__c/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coletivo</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>