workspace-sf/force-app/main/default/objects/Configuracao__c/validationRules/ValidarAtivacaoConfiguracao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarAtivacaoConfiguracao</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
	ISPICKVAL(Status__c, &apos;Ativo&apos;), 
	NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Em ativação&apos;)) 
)</errorConditionFormula>
    <errorMessage>A configuração não pode ser ativada neste status</errorMessage>
</ValidationRule>