workspace-sf/force-app/main/default/objects/Configuracao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Segmento__c</columns>
    <columns>Peso__c</columns>
    <columns>VigenciaInicial__c</columns>
    <columns>VigenciaFinal__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as configurações</label>
</ListView>